# Parallels

./: first  hello  hello.c  results1.txt  results3.txt
1Task/: CMakeLists.txt  README.MD  first.cpp
2Lab/: grafs.ipynb
2Lab/1/: 1task.cpp  CMakeLists.txt  results.txt
2Lab/2/: 2task.cpp  CMakeLists.txt  results.txt
2Lab/3/: 3task.cpp  CMakeLists.txt  results2.txt
3Lab/1/: CMakeLists.txt  jthread.cpp  thread.cpp
3Lab/2/: CMakeLists.txt  check  check.cpp  check.sh  server  server.cpp  start.sh
3Lab/2/results/: client1_sin.txt  client2_pow.txt  client3_sqrt.txt
